# cdSirius

./: CD Sirius Node notes.docx  README.md  node.json  pyproject.toml  ~$ Sirius Node notes.docx
cdsirius/: CdScriptingNodeHelper.py  __init__.py  cli.py  node_args.json  node_args_mac.json  submitJob.py
node/: CdScriptingNodeHelper.py  cdSirius.py  formatSpectra.py  node_args.json  node_args_mac.json  submitJob.py
